live update checkbox, some other extra gui
git-svn-id: http://svn.vuze.com/public/client@7527 c2c1b7af-1477-405b-86ee-8aefd1fc4dd2